# mcp_demo

./: EXAMPLE.md  README.md  client.py  docker-compose.yml  mcp_documentation.txt  pyproject.toml  server.py  weather.py
client/: Dockerfile  client.py  requirements.txt
ollama/: Dockerfile  entrypoint.sh  models.txt  readiness_check.sh
server/: .dockerignore  Dockerfile  llms-full.txt  llms-mid.txt  llms-small.txt  mcp_documentation.txt  requirements.txt  server.py
