[project]
name = "weather"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.6.1",
    "httpx>=0.28.1",
    "langchain>=0.3.24",
    "langchain-community>=0.3.24",
    "langchain-ollama>=0.3.3",
    "langgraph>=0.4.7",
    "mcp[cli]>=1.6.0",
    "langchain_mcp_adapters>=0.1.7"
]
